option java_package = "com.aerofs.proto";
option optimize_for = LITE_RUNTIME; // remove reflection

/*
 * Status information for an object (file/folder) under the AeroFS root
 */
message PBPathStatus {
    /*
     * Summary of the sync status across all devices on which the object is shared
     */
    enum Sync {
        UNKNOWN = 0;                // sync status currently unavailable
        OUT_SYNC = 1;               // all peers out of sync
        PARTIAL_SYNC = 2;           // 1+ peer in sync and 1+ peer out of sync
        IN_SYNC = 3;                // all peers in sync
    }

    /*
     * Non-exclusive boolean flags
     */
    enum Flag {
        DOWNLOADING = 1;            // (this file|a file under this folder) is being downloaded
        UPLOADING   = 2;            // (this file|a file under this folder) is being uploaded
    }

    required Sync sync = 1;
    required int32 flags = 2;       // bitwise OR of zero or more Flag values
}